# storage/api-docs/api-docs.json
@@ -1434,7 +1434,7 @@
                 ],
                 "summary": "Войти в аккаунт",
                 "description": "Проверяет credentials и создаёт новый токен в случае успеха",
-                "operationId": "462c3893ea1ca41948fc2ab2ef3a0209",
+                "operationId": "signin",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -1510,6 +1510,90 @@
                                                 "type": "string"
                                             },
                                             "example": []
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user/me": {
+            "get": {
+                "tags": [
+                    "Пользователь"
+                ],
+                "summary": "Получить пользователя по сессии",
+                "description": "Возвращает пользователя из сессии если это возможно",
+                "operationId": "getUser",
+                "responses": {
+                    "200": {
+                        "description": "Успешный вывод пользователя",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": "true"
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Session active"
+                                        },
+                                        "data": {
+                                            "required": [
+                                                "first_name",
+                                                "last_name",
+                                                "birthday",
+                                                "email",
+                                                "role"
+                                            ],
+                                            "properties": {
+                                                "first_name": {
+                                                    "type": "string",
+                                                    "example": "Иван"
+                                                },
+                                                "last_name": {
+                                                    "type": "string",
+                                                    "example": "Иванов"
+                                                },
+                                                "patronymic": {
+                                                    "type": "string",
+                                                    "example": "Иванович"
+                                                },
+                                                "birthday": {
+                                                    "type": "string",
+                                                    "example": "2000-01-01T00:00:00.000000Z"
+                                                },
+                                                "email": {
+                                                    "type": "string",
+                                                    "example": "foo@bar.com"
+                                                },
+                                                "role": {
+                                                    "type": "string",
+                                                    "example": "user"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Пользователь не авторизирован",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated."
                                         }
                                     },
                                     "type": "object"
